# PMOS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.backend.json  tsconfig.json  vite.config.ts  vitest.config.ts
subprojects/ad/: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  subproject.json
subprojects/ad/automation/: AIFS 广告数据可观测系统 Demo.docx  AIFS 广告数据链路可观测 AI 系统（PRD v2.0）.docx  AIFS 数据链路可观测系统（Figma设计稿 v1.0）.docx  CLAUDE.md  广告归因流程图.extracted.txt  广告自动化.txt  广告行为分析系统 v1 产品 PRD（产品级可落地版本）+ UI原型结构设计.docx  数据解释系统.md  需求定义-最佳实践-方案最优解-前端最优解-UX最优解-用户demo呈现-后端最优解-Agent开放设计-后端demo呈现-业务数据服务接入-完整demo呈现-自动循环.docx  需求文档.md
subprojects/ad/docs/: xiaoqiao demo.md  产品规划蓝图v1-小乔智投Agent (2).md  小乔智投-Ant-Design-X默认规范-2026-05-09.md  小乔智投-autonomous-delivery-run-测试方案-2026-05-09.md  小乔智投-v0.7-rollout-to-aiocoding-2026-05-09.md  小乔智投-业务与系统全貌-2026-05-08.md  小乔智投-交付总控-2026-05-08.md  小乔智投-产品规划文档-2026-05-08.md  小乔智投-产品重启真源-2026-05-07.md  小乔智投-会话支撑能力设计-2026-05-09.md  小乔智投-前端分层与开源基座方案-2026-05-09.md  小乔智投-前端真源治理自测-2026-05-09.md  小乔智投-前置文档评审委员会清单-2026-05-08.md  小乔智投-功能开发说明文档-2026-05-08.md  小乔智投-岗位职责矩阵-2026-05-07.md  小乔智投-开发任务拆解与技术评审-2026-05-08.md  小乔智投-接口真源-2026-05-07.md  小乔智投-数据对象真源-2026-05-07.md  小乔智投-数据表真源-2026-05-07.md  小乔智投-服务目录真源-2026-05-07.md  小乔智投-治理验证报告-2026-05-09.md  小乔智投-自动联调实施方案-2026-05-08.md  小乔智投-自动联调设计-2026-05-08.md  小乔智投-设计文档-2026-05-08.md  小乔智投-需求文档-2026-05-08.md  (+19 more)
(+2008 files in other folders)
